--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/pokeball-icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000"/>
+    <style>
+      @font-face {
+        font-family: PokemonFont;
+        src: url("%PUBLIC_URL%/pokemonFonts.ttf");
+      }
+    </style>
     <title>Pokedex</title>
   </head>
   <body>
